ico: Fix icon quality sorting

Despite the inherited comment, commit 99508c7 sorted the icons by
increasing instead of decreasing quality.

https://bugzilla.gnome.org/show_bug.cgi?id=785447